--- a/console.html
+++ b/console.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width"/>
+    <script type="text/javascript" src="console.js"></script>
 </head>
 <body>
     <input id="input" style="width:100%"/><button id="input-button" style="width:100%">enter</button>
